fix alignment on nav bar

--- a/unit1_projects/stylesheets/v4.css
+++ b/unit1_projects/stylesheets/v4.css
@@ -223,11 +223,11 @@ footer > p {
   ul {
     margin-bottom: 30px;
     text-align: center;
-    margin: 0 ;
+    padding:15px 0 15px 0;
   }
   ul li{
     width: 90%;
-    font-size: 1.2em;
+    font-size: 1.6em;
     padding: 25px 15px 15px 15px;
     margin:0;
   }
